# sheep-wolf-n-dog-decomp

./: CMakeLists.txt  readme.MD
.github/workflows/: cmake-single-platform.yml
resources/: embed_bmp.rc  launcher.rc  resource.h
src/: bitmapUtils.cpp  bitmapUtils.h  main.cpp
